--- a/styles.css
+++ b/styles.css
@@ -127,16 +127,25 @@ header.sticky ul li a {
 }
 
 .text-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     flex-grow: 1; 
 }
-
-
 
 h1 {
     font-family: "Poppins", sans-serif;
     font-size: 100px;
 }
 
+h2 {
+    font-weight: normal;
+}
+
+h3 {
+    font-weight: normal;
+}
 /*Hover Effect for Navbar*/
 
 a:hover.fancy:hover .letter {
