--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ header.sticky ul li a {
 }
 
 .left-img {
-    margin-top: 50px;
+    margin-top: 100px;
     margin-right: 20px; 
     height: 400px;
     width: 400px;
@@ -134,6 +134,7 @@ header.sticky ul li a {
     flex-grow: 1; 
 }
 
+
 h1 {
     font-family: "Poppins", sans-serif;
     font-size: 100px;
@@ -141,10 +142,12 @@ h1 {
 
 h2 {
     font-weight: normal;
+    font-size: 50px;
 }
 
 h3 {
     font-weight: normal;
+    font-size: 20px;
 }
 /*Hover Effect for Navbar*/
 
@@ -314,7 +317,7 @@ section {
 .logo img {
     height: 300px;
     width: 400px;
-    
+    border-radius: 20px;
 }
 
 @keyframes pulse {
